--- a/references.bib
+++ b/references.bib
@@ -23,6 +23,26 @@
   file = {/Users/james/Zotero/storage/N6Z3I76M/Appelbaum et al. - 2018 - Journal article reporting standards for quantitati.pdf}
 }
 
+@article{babatundeDevelopmentUsabilityTesting2020,
+  title = {Development and {{Usability Testing}} of a {{Web-Based}} and {{Therapist-Assisted Coping Skills Program}} for {{Managing Psychosocial Problems}} in {{Individuals With Hand}} and {{Upper Limb Injuries}}: {{Mixed Methods Study}}},
+  shorttitle = {Development and {{Usability Testing}} of a {{Web-Based}} and {{Therapist-Assisted Coping Skills Program}} for {{Managing Psychosocial Problems}} in {{Individuals With Hand}} and {{Upper Limb Injuries}}},
+  author = {Babatunde, Folarin Omoniyi and MacDermid, Joy and Grewal, Ruby and Macedo, Luciana and Szekeres, Mike},
+  year = {2020},
+  month = may,
+  journal = {JMIR Human Factors},
+  volume = {7},
+  number = {2},
+  pages = {e17088},
+  publisher = {{JMIR Publications Inc., Toronto, Canada}},
+  doi = {10.2196/17088},
+  urldate = {2021-04-20},
+  abstract = {Background: Ineffective coping has been linked to prolonged pain, distress, anxiety, and depression after a hand and upper limb injury. Evidence shows that interventions based on cognitive behavioral therapy (CBT) may be effective in improving treatment outcomes, but traditional psychological interventions are resource intensive and unrealistic in busy hand therapy practices. Developing web-based, evidence-based psychological interventions specifically for hand therapy may be feasible in clinical practice and at home with reduced training and travel costs. Hand Therapy Online Coping Skills (HOCOS) is a program developed to supplement traditional hand therapy with therapist-assisted coping skills training based on principles from CBT and the Technology Acceptance Model. Objective: This study aimed to describe the development and assess the usability of HOCOS to support hand therapists in the management of psychosocial problems. Methods: The ADDIE model (Analysis, Design, Development, Implementation, and Evaluation) of system design was applied to create HOCOS. The usability testing of HOCOS involved a 2-stage process. In the first step, heuristic testing with information and communications technology (ICT) experts was completed using two sets of heuristics: Monkman heuristics and the Health Literacy Online (HLO) checklist. The second step involved user testing with hand therapists performing a series of online and face-to-face activities, completing 12 tasks on the website using the think-aloud protocol, completing the system usability scale (SUS) questionnaire, and a semistructured feedback interview in 2 iterative cycles. Descriptive statistics and content analyses were used to organize the data. Results: In total, 4 ICT experts and 12 therapists completed usability testing. The heuristic evaluation revealed 15 of 35 violations on the HLO checklist and 5 of 11 violations on the Monkman heuristics. Initially, hand therapists found 5 tasks to be difficult but were able to complete all 12 tasks after the second cycle of testing. The cognitive interview findings were organized into 6 themes: task performance, navigation, design esthetics, content, functionality and features, and desire for future use. Usability issues identified were addressed in two iterative cycles. There was good agreement on all items of the SUS. Overall, therapists found that HOCOS was a detailed and helpful learning resource for therapists and patients. Conclusions: We describe the development and usability testing of HOCOS; a new web-based psychosocial intervention for individuals with a hand and upper limb injuries. HOCOS targets psychosocial problems linked to prolonged pain and disability by increasing access to therapist-guided coping skills training. We actively involved target users in the development and usability evaluation of the website. The final website was modified to meet the needs and preferences of the participants.},
+  copyright = {Unless stated otherwise, all articles are open-access distributed under the terms of the Creative Commons Attribution License (http://creativecommons.org/licenses/by/2.0/), which permits unrestricted use, distribution, and reproduction in any medium, provided the original work ("first published in the Journal of Medical Internet Research...") is properly cited with original URL and bibliographic citation information. The complete bibliographic information, a link to the original publication on http://www.jmir.org/, as well as this copyright and license information must be included.},
+  langid = {english},
+  keywords = {\_tablet},
+  file = {/Users/james/Zotero/storage/K9HP88AE/Babatunde et al_2020_Development and Usability Testing of a Web-Based and Therapist-Assisted Coping.pdf;/Users/james/Zotero/storage/ZMKQDHK6/Babatunde et al_2020_Development and Usability Testing of a Web-Based and Therapist-Assisted Coping.pdf;/Users/james/Zotero/storage/J6NNWBRK/e17088.html}
+}
+
 @article{bandInterventionPlanningDigital2017a,
   title = {Intervention Planning for a Digital Intervention for Self-Management of Hypertension: A Theory-, Evidence- and Person-Based Approach},
   shorttitle = {Intervention Planning for a Digital Intervention for Self-Management of Hypertension},
