update workshops and focus group chapters

--- a/index.qmd
+++ b/index.qmd
@@ -1,38 +1,1 @@
-# Abstract
-
-# Background
-
-# Reflexivity and Context {#reflexivity}
-
-# PART 1: Identifying factors limiting reporting guideline impact {.unnumbered}
-
-# Qualitative Evidence Synthesis
-
-# Review of survey content
-
-# Audit of EQUATOR-Network.org
-
-# Journal Guideline Audit
-
-# PART 2: Turning reporting guidelines into a behaviour change intervention {.unnumbered}
-
-# The Behaviour Change Wheel
-
-{{< include chapters/8_workshops/index.qmd >}}
-
-{{< include chapters/9_focus_groups/index.qmd >}}
-
-{{< include chapters/10_redesign/index.qmd >}}
-
-# Pilot
-
-# Discussion
-
-# References
-
-::: {#refs}
-:::
-
-# Appendices {.unnumbered}
-
-{{< include chapters/appendix/index.qmd >}}
+Nothing to see here yet!
