reorganise - add earlier chapters and auto convert

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,9 @@
+@misc{101HealthResearch,
+  title = {101 {{Health Research}} \& {{Statistics}} \textendash{} {{Quality}}. {{Efficiency}}. {{Ethics}}. {{Teamwork}}.},
+  urldate = {2023-07-17},
+  langid = {american}
+}
+
 @misc{APAPsycNetFullTextHTML,
   title = {{{APA PsycNet FullTextHTML}} Page},
   urldate = {2023-06-28},
@@ -21,6 +27,38 @@
   abstract = {Following a review of extant reporting standards for scientific publication, and reviewing 10 years of experience since publication of the first set of reporting standards by the American Psychological Association (APA; APA Publications and Communications Board Working Group on Journal Article Reporting Standards, 2008), the APA Working Group on Quantitative Research Reporting Standards recommended some modifications to the original standards. Examples of modifications include division of hypotheses, analyses, and conclusions into 3 groupings (primary, secondary, and exploratory) and some changes to the section on meta-analysis. Several new modules are included that report standards for observational studies, clinical trials, longitudinal studies, replication studies, and N-of-1 studies. In addition, standards for analytic methods with unique characteristics and output (structural equation modeling and Bayesian analysis) are included. These proposals were accepted by the Publications and Communications Board of APA and supersede the standards included in the 6th edition of the Publication Manual of the American Psychological Association (APA, 2010).},
   langid = {english},
   file = {/Users/james/Zotero/storage/N6Z3I76M/Appelbaum et al. - 2018 - Journal article reporting standards for quantitati.pdf}
+}
+
+@misc{ARINHomePage,
+  title = {{{ARIN}} Home Page},
+  journal = {ARIN},
+  urldate = {2023-07-17},
+  abstract = {This site describes the Background to ARIN, What is ARIN, and its objectives},
+  howpublished = {https://africarinetwork.wixsite.com/website},
+  langid = {english}
+}
+
+@article{atkinsGuideUsingTheoretical2017,
+  title = {A Guide to Using the {{Theoretical Domains Framework}} of Behaviour Change to Investigate Implementation Problems},
+  author = {Atkins, Lou and Francis, Jill and Islam, Rafat and O'Connor, Denise and Patey, Andrea and Ivers, Noah and Foy, Robbie and Duncan, Eilidh M. and Colquhoun, Heather and Grimshaw, Jeremy M. and Lawton, Rebecca and Michie, Susan},
+  year = {2017},
+  month = jun,
+  journal = {Implementation Science},
+  volume = {12},
+  number = {1},
+  pages = {77},
+  issn = {1748-5908},
+  doi = {10.1186/s13012-017-0605-9},
+  urldate = {2023-07-14},
+  abstract = {Implementing new practices requires changes in the behaviour of relevant actors, and this is facilitated by understanding of the determinants of current and desired behaviours. The Theoretical Domains Framework (TDF) was developed by a collaboration of behavioural scientists and implementation researchers who identified theories relevant to implementation and grouped constructs from these theories into domains. The collaboration aimed to provide a comprehensive, theory-informed approach to identify determinants of behaviour. The first version was published in 2005, and a subsequent version following a validation exercise was published in 2012. This guide offers practical guidance for those who wish to apply the TDF to assess implementation problems and support intervention design. It presents a brief rationale for using a theoretical approach to investigate and address implementation problems, summarises the TDF and its development, and describes how to apply the TDF to achieve implementation objectives. Examples from the implementation research literature are presented to illustrate relevant methods and practical considerations.},
+  keywords = {Guide,Methods,Theoretical Domains Framework},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Atkins et al_2017_A guide to using the Theoretical Domains Framework of behaviour change to.pdf}
+}
+
+@misc{AuthorAIDHomea,
+  title = {{{AuthorAID}} - {{Home}}},
+  urldate = {2023-07-17},
+  howpublished = {https://www.authoraid.info/en/}
 }
 
 @article{babatundeDevelopmentUsabilityTesting2020,
@@ -96,6 +134,13 @@
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Cane et al_2012_Validation of the theoretical domains framework for use in behaviour change and.pdf}
 }
 
+@article{dolanMINDSPACEInfluencingBehaviour2010,
+  title = {{{MINDSPACE}}: Influencing Behaviour for Public Policy},
+  author = {Dolan, Paul and Hallsworth, Michael and Halpern, David and King, Dominic and Vlaev, Ivo},
+  year = {2010},
+  publisher = {{Institute of Government}}
+}
+
 @misc{experienceGuideUsingUserExperience,
   title = {A {{Guide}} to {{Using User-Experience Research Methods}}},
   author = {Experience, World Leaders in Research-Based User},
@@ -104,6 +149,16 @@
   abstract = {Modern day UX research methods answer a wide range of questions. To help you know when to use which user research method, each of 20 methods is mapped across 3 dimensions and over time within a typical product-development process.},
   howpublished = {https://www.nngroup.com/articles/guide-ux-research-methods/},
   langid = {english}
+}
+
+@article{fishbeinFactorsInfluencingBehavior2001,
+  title = {Factors Influencing Behavior and Behavior Change},
+  author = {Fishbein, Martin and Triandis, Harry C and Kanfer, Frederick H and Becker, Marshall and Middlestadt, Susan E and Eichler, Anita and others},
+  year = {2001},
+  journal = {Handbook of health psychology},
+  volume = {3},
+  number = {1},
+  pages = {3--17}
 }
 
 @misc{Guideline,
@@ -170,6 +225,25 @@
   isbn = {978-1-4129-6390-9},
   langid = {english},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/M.Given_2008_The SAGE Encyclopedia of Qualitative Research Methods.pdf}
+}
+
+@article{malterudSampleSizeQualitative2016,
+  title = {Sample {{Size}} in {{Qualitative Interview Studies}}: {{Guided}} by {{Information Power}}},
+  shorttitle = {Sample {{Size}} in {{Qualitative Interview Studies}}},
+  author = {Malterud, Kirsti and Siersma, Volkert Dirk and Guassora, Ann Dorrit},
+  year = {2016},
+  month = nov,
+  journal = {Qualitative Health Research},
+  volume = {26},
+  number = {13},
+  pages = {1753--1760},
+  publisher = {{SAGE Publications Inc}},
+  issn = {1049-7323},
+  doi = {10.1177/1049732315617444},
+  urldate = {2022-10-12},
+  abstract = {Sample sizes must be ascertained in qualitative studies like in quantitative studies but not by the same means. The prevailing concept for sample size in qualitative studies is ?saturation.? Saturation is closely tied to a specific methodology, and the term is inconsistently applied. We propose the concept ?information power? to guide adequate sample size for qualitative studies. Information power indicates that the more information the sample holds, relevant for the actual study, the lower amount of participants is needed. We suggest that the size of a sample with sufficient information power depends on (a) the aim of the study, (b) sample specificity, (c) use of established theory, (d) quality of dialogue, and (e) analysis strategy. We present a model where these elements of information and their relevant dimensions are related to information power. Application of this model in the planning and during data collection of a qualitative study is discussed.},
+  langid = {english},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Malterud et al_2016_Sample Size in Qualitative Interview Studies.pdf}
 }
 
 @article{michieBehaviourChangeWheel2011,
@@ -239,6 +313,15 @@
   file = {/Users/james/Zotero/storage/SB84NEV4/Møller_2013_Usability Testing of User Manuals.pdf;/Users/james/Zotero/storage/8CTJ9RSI/7892.html}
 }
 
+@article{mookMotivationOrganizationAction,
+  title = {Motivation : The Organization of Action},
+  shorttitle = {Motivation},
+  author = {Mook, Douglas G.},
+  journal = {(No Title)},
+  urldate = {2023-07-14},
+  langid = {english}
+}
+
 @misc{NICEClinicalGuidelines,
   title = {{{NICE}} Clinical Guidelines | {{Tools}} and Resources | {{The}} Guidelines Manual | {{Guidance}} | {{NICE}}},
   publisher = {{NICE}},
@@ -246,4 +329,48 @@
   abstract = {The guidelines manual},
   howpublished = {https://www.nice.org.uk/process/pmg6/resources/how-nice-clinical-guidelines-are-developed-an-overview-for-stakeholders-the-public-and-the-nhs-2549708893/chapter/nice-clinical-guidelines},
   langid = {english}
+}
+
+@misc{PenelopeAi,
+  title = {Penelope.Ai},
+  journal = {Penelope.ai},
+  urldate = {2020-02-14},
+  abstract = {Penelope.ai is an online tool that automatically checks whether scientific manuscripts meet journal requirements. It helps editors process manuscripts faster and helps authors polish their work before submitting to a journal.},
+  howpublished = {https://www.penelope.ai},
+  langid = {american},
+  file = {/Users/james/Zotero/storage/HK8U72WF/www.penelope.ai.html}
+}
+
+@article{skivingtonNewFrameworkDeveloping2021,
+  title = {A New Framework for Developing and Evaluating Complex Interventions: Update of {{Medical Research Council}} Guidance},
+  shorttitle = {A New Framework for Developing and Evaluating Complex Interventions},
+  author = {Skivington, Kathryn and Matthews, Lynsay and Simpson, Sharon Anne and Craig, Peter and Baird, Janis and Blazeby, Jane M and Boyd, Kathleen Anne and Craig, Neil and French, David P and McIntosh, Emma and Petticrew, Mark and {Rycroft-Malone}, Jo and White, Martin and Moore, Laurence},
+  year = {2021},
+  month = sep,
+  journal = {BMJ},
+  pages = {n2061},
+  issn = {1756-1833},
+  doi = {10.1136/bmj.n2061},
+  urldate = {2021-10-01},
+  langid = {english},
+  keywords = {\_tablet},
+  file = {/Users/james/Zotero/storage/BN2EJTND/Skivington et al_2021_A new framework for developing and evaluating complex interventions.pdf;/Users/james/Zotero/storage/SXGWNL75/Skivington et al_2021_A new framework for developing and evaluating complex interventions.pdf;/Users/james/Zotero/storage/BH2YWW3R/bmj.html}
+}
+
+@article{yardleyPersonBasedApproachIntervention2015,
+  title = {The {{Person-Based Approach}} to {{Intervention Development}}: {{Application}} to {{Digital Health-Related Behavior Change Interventions}}},
+  shorttitle = {The {{Person-Based Approach}} to {{Intervention Development}}},
+  author = {Yardley, Lucy and Morrison, Leanne and Bradbury, Katherine and Muller, Ingrid},
+  year = {2015},
+  month = jan,
+  journal = {Journal of Medical Internet Research},
+  volume = {17},
+  number = {1},
+  pages = {e4055},
+  publisher = {{JMIR Publications Inc., Toronto, Canada}},
+  doi = {10.2196/jmir.4055},
+  urldate = {2023-07-14},
+  abstract = {This paper describes an approach that we have evolved for developing successful digital interventions to help people manage their health or illness. We refer to this as the \&\#8220;person-based\&\#8221; approach to highlight the focus on understanding and accommodating the perspectives of the people who will use the intervention. While all intervention designers seek to elicit and incorporate the views of target users in a variety of ways, the person-based approach offers a distinctive and systematic means of addressing the user experience of intended behavior change techniques in particular and can enhance the use of theory-based and evidence-based approaches to intervention development. There are two key elements to the person-based approach. The first is a developmental process involving qualitative research with a wide range of people from the target user populations, carried out at every stage of intervention development, from planning to feasibility testing and implementation. This process goes beyond assessing acceptability, usability, and satisfaction, allowing the intervention designers to build a deep understanding of the psychosocial context of users and their views of the behavioral elements of the intervention. Insights from this process can be used to anticipate and interpret intervention usage and outcomes, and most importantly to modify the intervention to make it more persuasive, feasible, and relevant to users. The second element of the person-based approach is to identify \&\#8220;guiding principles\&\#8221; that can inspire and inform the intervention development by highlighting the distinctive ways that the intervention will address key context-specific behavioral issues. This paper describes how to implement the person-based approach, illustrating the process with examples of the insights gained from our experience of carrying out over a thousand interviews with users, while developing public health and illness management interventions that have proven effective in trials involving tens of thousands of users.},
+  langid = {english},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Yardley et al_2015_The Person-Based Approach to Intervention Development.pdf}
 }
