small fixes: - adding references - removing line breaks from auto convert

--- a/references.bib
+++ b/references.bib
@@ -4,6 +4,15 @@
   langid = {american}
 }
 
+@misc{AnalyticsToolsSolutions,
+  title = {Analytics {{Tools}} \& {{Solutions}} for {{Your Business}} \textendash{} {{Google Analytics}}},
+  journal = {Google Marketing Platform},
+  urldate = {2022-07-27},
+  abstract = {Google Analytics gives you the tools you need to better understand your customers. You can then use those business insights to take action, such as improving your website, creating tailored audience lists and more.},
+  howpublished = {https://marketingplatform.google.com/intl/en\_uk/about/analytics/},
+  langid = {english}
+}
+
 @misc{APAPsycNetFullTextHTML,
   title = {{{APA PsycNet FullTextHTML}} Page},
   urldate = {2023-06-28},
@@ -53,6 +62,13 @@
   abstract = {Implementing new practices requires changes in the behaviour of relevant actors, and this is facilitated by understanding of the determinants of current and desired behaviours. The Theoretical Domains Framework (TDF) was developed by a collaboration of behavioural scientists and implementation researchers who identified theories relevant to implementation and grouped constructs from these theories into domains. The collaboration aimed to provide a comprehensive, theory-informed approach to identify determinants of behaviour. The first version was published in 2005, and a subsequent version following a validation exercise was published in 2012. This guide offers practical guidance for those who wish to apply the TDF to assess implementation problems and support intervention design. It presents a brief rationale for using a theoretical approach to investigate and address implementation problems, summarises the TDF and its development, and describes how to apply the TDF to achieve implementation objectives. Examples from the implementation research literature are presented to illustrate relevant methods and practical considerations.},
   keywords = {Guide,Methods,Theoretical Domains Framework},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Atkins et al_2017_A guide to using the Theoretical Domains Framework of behaviour change to.pdf}
+}
+
+@misc{AuthorAIDHome,
+  title = {{{AuthorAID}} - {{Home}}},
+  urldate = {2020-02-14},
+  howpublished = {https://www.authoraid.info/en/},
+  file = {/Users/james/Zotero/storage/WTUNHUFN/en.html}
 }
 
 @misc{AuthorAIDHomea,
@@ -134,11 +150,30 @@
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Cane et al_2012_Validation of the theoretical domains framework for use in behaviour change and.pdf}
 }
 
+@phdthesis{carvalhoParticipatoryDesignBehaviour2020,
+  title = {Participatory {{Design}} for {{Behaviour Change}}: {{An Integrative Approach}} to {{Improving Healthcare Practice Focused}} on {{Staff Participation}}},
+  author = {Carvalho, Fernando},
+  year = {2020}
+}
+
 @article{dolanMINDSPACEInfluencingBehaviour2010,
   title = {{{MINDSPACE}}: Influencing Behaviour for Public Policy},
   author = {Dolan, Paul and Hallsworth, Michael and Halpern, David and King, Dominic and Vlaev, Ivo},
   year = {2010},
   publisher = {{Institute of Government}}
+}
+
+@misc{EQUATORNetworkEnhancing,
+  title = {The {{EQUATOR Network}} | {{Enhancing}} the {{QUAlity}} and {{Transparency Of Health Research}}},
+  urldate = {2020-02-14},
+  howpublished = {https://www.equator-network.org/},
+  file = {/Users/james/Zotero/storage/9ACX4BQX/www.equator-network.org.html}
+}
+
+@misc{EQUATORNetworkGoogle,
+  title = {The {{EQUATOR Network Google Analytics}}},
+  urldate = {2022-07-28},
+  howpublished = {https://www.equator-network.org/analytics}
 }
 
 @misc{experienceGuideUsingUserExperience,
@@ -339,6 +374,13 @@
   howpublished = {https://www.penelope.ai},
   langid = {american},
   file = {/Users/james/Zotero/storage/HK8U72WF/www.penelope.ai.html}
+}
+
+@misc{ScimagoJournalCountry,
+  title = {Scimago {{Journal}} \& {{Country Rank}}},
+  urldate = {2020-11-06},
+  howpublished = {https://www.scimagojr.com/},
+  file = {/Users/james/Zotero/storage/9KNVZPEY/www.scimagojr.com.html}
 }
 
 @article{skivingtonNewFrameworkDeveloping2021,
