act on Charlotte's feedback

--- a/references.bib
+++ b/references.bib
@@ -695,6 +695,25 @@
   file = {/Users/james/Zotero/storage/3RNGGXPU/McDonough et al_Familiarity of Non-industry Authors With Good Publication Practice and Clinical.pdf;/Users/james/Zotero/storage/EH9LYLMS/McDonough J. et al_2011_Familiarity of non-industry authors with good publication practice and clinical.pdf}
 }
 
+@article{michieBehaviorChangeTechnique2013,
+  title = {The Behavior Change Technique Taxonomy (v1) of 93 Hierarchically Clustered Techniques: Building an International Consensus for the Reporting of Behavior Change Interventions},
+  shorttitle = {The Behavior Change Technique Taxonomy (v1) of 93 Hierarchically Clustered Techniques},
+  author = {Michie, Susan and Richardson, Michelle and Johnston, Marie and Abraham, Charles and Francis, Jill and Hardeman, Wendy and Eccles, Martin P. and Cane, James and Wood, Caroline E.},
+  year = {2013},
+  month = aug,
+  journal = {Annals of Behavioral Medicine: A Publication of the Society of Behavioral Medicine},
+  volume = {46},
+  number = {1},
+  pages = {81--95},
+  issn = {1532-4796},
+  doi = {10.1007/s12160-013-9486-6},
+  abstract = {BACKGROUND: CONSORT guidelines call for precise reporting of behavior change interventions: we need rigorous methods of characterizing active content of interventions with precision and specificity. OBJECTIVES: The objective of this study is to develop an extensive, consensually agreed hierarchically structured taxonomy of techniques [behavior change techniques (BCTs)] used in behavior change interventions. METHODS: In a Delphi-type exercise, 14 experts rated labels and definitions of 124 BCTs from six published classification systems. Another 18 experts grouped BCTs according to similarity of active ingredients in an open-sort task. Inter-rater agreement amongst six researchers coding 85 intervention descriptions by BCTs was assessed. RESULTS: This resulted in 93 BCTs clustered into 16 groups. Of the 26 BCTs occurring at least five times, 23 had adjusted kappas of 0.60 or above. CONCLUSIONS: "BCT taxonomy v1," an extensive taxonomy of 93 consensually agreed, distinct BCTs, offers a step change as a method for specifying interventions, but we anticipate further development and evaluation based on international, interdisciplinary consensus.},
+  langid = {english},
+  pmid = {23512568},
+  keywords = {Behavior Therapy,Cluster Analysis,Consensus,Humans,Treatment Outcome},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Michie et al_2013_The behavior change technique taxonomy (v1) of 93 hierarchically clustered.pdf}
+}
+
 @article{michieBehaviourChangeWheel2011,
   title = {The Behaviour Change Wheel: {{A}} New Method for Characterising and Designing Behaviour Change Interventions},
   shorttitle = {The Behaviour Change Wheel},
