add references for website audit

--- a/references.bib
+++ b/references.bib
@@ -21,6 +21,15 @@
   langid = {english}
 }
 
+@misc{AnalyticsToolsSolutionsa,
+  title = {Analytics {{Tools}} \& {{Solutions}} for {{Your Business}} \textendash{} {{Google Analytics}}},
+  journal = {Google Marketing Platform},
+  urldate = {2023-07-31},
+  abstract = {Google Analytics gives you the tools you need to better understand your customers. You can then use those business insights to take action, such as improving your website, creating tailored audience lists and more.},
+  howpublished = {https://marketingplatform.google.com/intl/en\_uk/about/analytics/},
+  langid = {english}
+}
+
 @misc{APAPsycNetFullTextHTML,
   title = {{{APA PsycNet FullTextHTML}} Page},
   urldate = {2023-06-28},
@@ -407,6 +416,18 @@
   file = {/Users/james/Zotero/storage/ZTPBAP4X/Fuller et al_2015_What affects authors' and editors' use of reporting guidelines.pdf;/Users/james/Zotero/storage/FELLCV7U/36330708eb094f5f987c245860786e4c.html;/Users/james/Zotero/storage/Z4JQ2LZR/36330708eb094f5f987c245860786e4c.html}
 }
 
+@misc{GA4AutomaticallyCollected,
+  title = {[{{GA4}}] {{Automatically}} Collected Events - {{Firebase Help}}},
+  urldate = {2023-07-31},
+  howpublished = {https://support.google.com/firebase/answer/9234069?sjid=11808073354477924035-EU\&visit\_id=638263997154270219-1141820337\&rd=1}
+}
+
+@misc{GA4PredefinedUser,
+  title = {[{{GA4}}] {{Predefined}} User Dimensions - {{Firebase Help}}},
+  urldate = {2023-07-31},
+  howpublished = {https://support.google.com/firebase/answer/9268042?sjid=11808073354477924035-EU\&visit\_id=638263997154270219-1141820337\&rd=1}
+}
+
 @article{girayAssessmentKnowledgeAwareness2020a,
   title = {Assessment of the Knowledge and Awareness of a Sample of Young Researcher Physicians on Reporting Guidelines and the {{EQUATOR}} Network: {{A}} Single Center Cross-Sectional Study},
   shorttitle = {Assessment of the Knowledge and Awareness of a Sample of Young Researcher Physicians on Reporting Guidelines and the {{EQUATOR}} Network},
@@ -423,6 +444,19 @@
   langid = {english},
   keywords = {\_tablet,*awareness,*cross-sectional study,*practice guideline,*resident,adult,article,Cesarean Section,Cross-Sectional Studies,female,human,human experiment,male,questionnaire,writing},
   file = {/Users/james/Zotero/storage/6FLRQJ5J/Gi̇ray et al_2020_Assessment of the knowledge and awareness of a sample of young researcher.pdf;/Users/james/Zotero/storage/4E6UUX47/682337.html}
+}
+
+@incollection{givenFocusGroups2008,
+  title = {Focus {{Groups}}},
+  booktitle = {The {{SAGE Encyclopedia}} of {{Qualitative Research Methods}}},
+  author = {Given, Lisa},
+  year = {2008},
+  pages = {353--354},
+  publisher = {{SAGE Publications, Inc.}},
+  address = {{Thousand Oaks}},
+  doi = {10.4135/9781412963909},
+  urldate = {2023-06-26},
+  keywords = {depth interviews,focus groups,group composition,group interview,in-depth interviews,interviews,moderator}
 }
 
 @article{glasziouReducingWasteIncomplete2014,
@@ -898,6 +932,18 @@
   file = {/Users/james/Zotero/storage/K2FXEN7Q/Phillips A. et al_2015_Pilot testing of the guideline for reporting of evidence-based practice.pdf;/Users/james/Zotero/storage/84U8ULLP/S0031940615021616.html}
 }
 
+@article{plumePublishPerishRise2014,
+  title = {Publish or Perish? {{The}} Rise of the Fractional Author\ldots},
+  shorttitle = {Publish or Perish?},
+  author = {Plume, Andrew and van Weijen, Daphne},
+  year = {2014},
+  month = sep,
+  journal = {Research Trends},
+  volume = {1},
+  number = {38},
+  issn = {2213-4441}
+}
+
 @article{pradyAssessingUtilityStandards2007,
   title = {Assessing the Utility of the Standards for Reporting Trials of Acupuncture ({{STRICTA}}): {{A}} Survey of Authors},
   shorttitle = {Assessing the {{Utility}} of the {{Standards}} for {{Reporting Trials}} of {{Acupuncture}} ({{STRICTA}})},
@@ -1103,6 +1149,14 @@
   file = {/Users/james/Zotero/storage/BN2EJTND/Skivington et al_2021_A new framework for developing and evaluating complex interventions.pdf;/Users/james/Zotero/storage/SXGWNL75/Skivington et al_2021_A new framework for developing and evaluating complex interventions.pdf;/Users/james/Zotero/storage/BH2YWW3R/bmj.html}
 }
 
+@misc{stmassociationSTMGlobalBrief,
+  title = {{{STM Global Brief}} 2021 \textendash{} {{Economics}} \& {{Market Size}}},
+  author = {{STM Association}},
+  urldate = {2023-07-31},
+  howpublished = {https://www.stm-assoc.org/wp-content/uploads/2022\_08\_24\_STM\_White\_Report\_a4\_v15.pdf},
+  file = {/Users/james/Zotero/storage/BZJZMD6Z/2022_08_24_STM_White_Report_a4_v15.pdf}
+}
+
 @article{struthersGoodReportsDevelopingWebsite2021,
   title = {{{GoodReports}}: Developing a Website to Help Health Researchers Find and Use Reporting Guidelines},
   shorttitle = {{{GoodReports}}},
@@ -1198,6 +1252,12 @@
   abstract = {The syntheses of multiple qualitative studies can pull together data across different contexts, generate new theoretical or conceptual models, identify research gaps, and provide evidence for the development, implementation and evaluation of health interventions. This study aims to develop a framework for reporting the synthesis of qualitative health research.},
   keywords = {Qualitative health research,Reporting,Standards,Thematic synthesis},
   file = {/Users/james/Zotero/storage/HNHYLRTB/Tong et al_2012_Enhancing transparency in reporting the synthesis of qualitative research.pdf;/Users/james/Zotero/storage/TNIENABA/1471-2288-12-181.html}
+}
+
+@misc{UsageStatisticsMarket,
+  title = {Usage {{Statistics}} and {{Market Share}} of {{Traffic Analysis Tools}} for {{Websites}}, {{July}} 2023},
+  urldate = {2023-07-31},
+  howpublished = {https://w3techs.com/technologies/overview/traffic\_analysis}
 }
 
 @misc{VIPChineseMedical,
