website evaluation revision

--- a/references.bib
+++ b/references.bib
@@ -4,6 +4,25 @@
   langid = {american}
 }
 
+@article{allisonComprehensiveFrameworkEvaluate2019,
+  title = {A {{Comprehensive Framework}} to {{Evaluate Websites}}: {{Literature Review}} and {{Development}} of {{GoodWeb}}},
+  shorttitle = {A {{Comprehensive Framework}} to {{Evaluate Websites}}},
+  author = {Allison, Rosalie and Hayes, Catherine and McNulty, Cliodna A M and Young, Vicki},
+  year = {2019},
+  month = oct,
+  journal = {JMIR Formative Research},
+  volume = {3},
+  number = {4},
+  pages = {e14372},
+  issn = {2561-326X},
+  doi = {10.2196/14372},
+  urldate = {2023-08-01},
+  abstract = {Background Attention is turning toward increasing the quality of websites and quality evaluation to attract new users and retain existing users. Objective This scoping study aimed to review and define existing worldwide methodologies and techniques to evaluate websites and provide a framework of appropriate website attributes that could be applied to any future website evaluations. Methods We systematically searched electronic databases and gray literature for studies of website evaluation. The results were exported to EndNote software, duplicates were removed, and eligible studies were identified. The results have been presented in narrative form. Results A total of 69 studies met the inclusion criteria. The extracted data included type of website, aim or purpose of the study, study populations (users and experts), sample size, setting (controlled environment and remotely assessed), website attributes evaluated, process of methodology, and process of analysis. Methods of evaluation varied and included questionnaires, observed website browsing, interviews or focus groups, and Web usage analysis. Evaluations using both users and experts and controlled and remote settings are represented. Website attributes that were examined included usability or ease of use, content, design criteria, functionality, appearance, interactivity, satisfaction, and loyalty. Website evaluation methods should be tailored to the needs of specific websites and individual aims of evaluations. GoodWeb, a website evaluation guide, has been presented with a case scenario. Conclusions This scoping study supports the open debate of defining the quality of websites, and there are numerous approaches and models to evaluate it. However, as this study provides a framework of the existing literature of website evaluation, it presents a guide of options for evaluating websites, including which attributes to analyze and options for appropriate methods.},
+  pmcid = {PMC6914275},
+  pmid = {31651406},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Allison et al_2019_A Comprehensive Framework to Evaluate Websites.pdf}
+}
+
 @misc{alvesGlobalIndexMedicus,
   title = {Global {{Index Medicus}} \textendash{} {{World Health Organization}}},
   author = {Alves, BIREME / OPAS / OMS-M{\'a}rcio},
@@ -332,6 +351,15 @@
   author = {Dolan, Paul and Hallsworth, Michael and Halpern, David and King, Dominic and Vlaev, Ivo},
   year = {2010},
   publisher = {{Institute of Government}}
+}
+
+@misc{ecommercefoundationEcommerceBenchmarkRetail,
+  title = {Ecommerce {{Benchmark Retail Report}} 2016},
+  author = {{Ecommerce Foundation}},
+  journal = {Ecommerce Europe},
+  urldate = {2023-08-02},
+  howpublished = {https://www.ecommerce-europe.eu/wp-content/uploads/2016/06/Ecommerce-Benchmark-Retail-Report-2016.pdf},
+  file = {/Users/james/Zotero/storage/6XE97NT9/Ecommerce-Benchmark-Retail-Report-2016.pdf}
 }
 
 @misc{EQUATORNetworkEnhancing,
@@ -944,6 +972,15 @@
   issn = {2213-4441}
 }
 
+@misc{PopupBuilderThat,
+  title = {Popup {{Builder That Boosts Sales}}.},
+  journal = {Popup Smart},
+  urldate = {2023-07-31},
+  abstract = {A no-code tool to increase e-commerce sales, build email lists and engage with your visitors in just 5-minutes.},
+  howpublished = {https://popupsmart.com/},
+  langid = {american}
+}
+
 @article{pradyAssessingUtilityStandards2007,
   title = {Assessing the Utility of the Standards for Reporting Trials of Acupuncture ({{STRICTA}}): {{A}} Survey of Authors},
   shorttitle = {Assessing the {{Utility}} of the {{Standards}} for {{Reporting Trials}} of {{Acupuncture}} ({{STRICTA}})},
@@ -1292,6 +1329,15 @@
   urldate = {2021-03-01},
   howpublished = {http://www.wanfangdata.com/},
   file = {/Users/james/Zotero/storage/F9CR94A5/www.wanfangdata.com.html}
+}
+
+@misc{WebMobileTag,
+  title = {Web \& {{Mobile Tag Management Solutions}} \textendash{} {{Google Tag Manager}}},
+  journal = {Google Marketing Platform},
+  urldate = {2023-07-31},
+  abstract = {Google Tag Manager helps make tag management simple, easy and reliable with tag management solutions that allow small businesses to deploy website tags all in one place.},
+  howpublished = {https://marketingplatform.google.com/intl/en\_uk/about/tag-manager/},
+  langid = {english}
 }
 
 @misc{WesternPacificRegion,
