--- a/index.qmd
+++ b/index.qmd
@@ -16,6 +16,6 @@ Some of the tables and figures aren't rendering nicely yet, especially in Word f
 
 ## Word Count Tallies: 
 
-Actual word counts will be lower. These numbers include the tables and references for each chapter. 
+Actual word counts will be slightly lower as these numbers include tables and references for each chapter. 
 
 {{< include metadata/_wordcounts.qmd >}}
