--- a/references.bib
+++ b/references.bib
@@ -474,6 +474,15 @@
   file = {/Users/james/Zotero/storage/6FLRQJ5J/Gi̇ray et al_2020_Assessment of the knowledge and awareness of a sample of young researcher.pdf;/Users/james/Zotero/storage/4E6UUX47/682337.html}
 }
 
+@misc{GitHubPages,
+  title = {{{GitHub Pages}}},
+  journal = {GitHub Pages},
+  urldate = {2023-08-04},
+  abstract = {Websites for you and your projects, hosted directly from your GitHub repository. Just edit, push, and your changes are live.},
+  howpublished = {https://pages.github.com/},
+  langid = {english}
+}
+
 @incollection{givenFocusGroups2008,
   title = {Focus {{Groups}}},
   booktitle = {The {{SAGE Encyclopedia}} of {{Qualitative Research Methods}}},
@@ -981,6 +990,16 @@
   langid = {american}
 }
 
+@misc{positRStudioIntegratedDevelopment,
+  title = {The {{RStudio Integrated Development Environment}} ({{IDE}}) Is the Preferred Tools for Data Scientists Who Develop in {{R}} \& {{Python}}.},
+  author = {{Posit}},
+  journal = {Posit},
+  urldate = {2023-08-04},
+  abstract = {The RStudio Integrated Development Environment (IDE) is the preferred tools for data scientists who develop in R \& Python.},
+  howpublished = {https://posit.co/products/open-source/rstudio/},
+  langid = {english}
+}
+
 @article{pradyAssessingUtilityStandards2007,
   title = {Assessing the Utility of the Standards for Reporting Trials of Acupuncture ({{STRICTA}}): {{A}} Survey of Authors},
   shorttitle = {Assessing the {{Utility}} of the {{Standards}} for {{Reporting Trials}} of {{Acupuncture}} ({{STRICTA}})},
@@ -1025,6 +1044,15 @@
   howpublished = {http://miror-ejd.eu/},
   langid = {american},
   file = {/Users/james/Zotero/storage/GRZIZ7TL/miror-ejd.eu.html}
+}
+
+@misc{QuartoOpenSource,
+  title = {Quarto: {{An}} Open Source Technical Publishing System for Creating Beautiful Articles, Websites, Blogs, Books, Slides, and More. {{Supports Python}}, {{R}}, {{Julia}}, and {{JavaScript}}.},
+  journal = {Quarto},
+  urldate = {2023-08-04},
+  abstract = {An open source technical publishing system for creating beautiful articles, websites, blogs, books, slides, and more. Supports Python, R, Julia, and JavaScript.},
+  howpublished = {https://quarto.org/},
+  langid = {english}
 }
 
 @article{radert.MethodsDocumentingSystematic2014,
@@ -1340,6 +1368,15 @@
   langid = {english}
 }
 
+@misc{WebsiteBuilderCreate,
+  title = {Website {{Builder}} \textemdash{} {{Create}} a {{Website}} in {{Minutes}}},
+  journal = {Squarespace},
+  urldate = {2023-08-04},
+  abstract = {Create a customizable website or online store with an all-in-one solution from Squarespace. Choose a website template and start your free trial today.},
+  howpublished = {https://www.squarespace.com/},
+  langid = {american}
+}
+
 @misc{WesternPacificRegion,
   title = {Western {{Pacific Region Index Medicus}}},
   urldate = {2021-03-01},
@@ -1370,4 +1407,13 @@
   abstract = {This paper describes an approach that we have evolved for developing successful digital interventions to help people manage their health or illness. We refer to this as the \&\#8220;person-based\&\#8221; approach to highlight the focus on understanding and accommodating the perspectives of the people who will use the intervention. While all intervention designers seek to elicit and incorporate the views of target users in a variety of ways, the person-based approach offers a distinctive and systematic means of addressing the user experience of intended behavior change techniques in particular and can enhance the use of theory-based and evidence-based approaches to intervention development. There are two key elements to the person-based approach. The first is a developmental process involving qualitative research with a wide range of people from the target user populations, carried out at every stage of intervention development, from planning to feasibility testing and implementation. This process goes beyond assessing acceptability, usability, and satisfaction, allowing the intervention designers to build a deep understanding of the psychosocial context of users and their views of the behavioral elements of the intervention. Insights from this process can be used to anticipate and interpret intervention usage and outcomes, and most importantly to modify the intervention to make it more persuasive, feasible, and relevant to users. The second element of the person-based approach is to identify \&\#8220;guiding principles\&\#8221; that can inspire and inform the intervention development by highlighting the distinctive ways that the intervention will address key context-specific behavioral issues. This paper describes how to implement the person-based approach, illustrating the process with examples of the insights gained from our experience of carrying out over a thousand interviews with users, while developing public health and illness management interventions that have proven effective in trials involving tens of thousands of users.},
   langid = {english},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Yardley et al_2015_The Person-Based Approach to Intervention Development.pdf}
+}
+
+@misc{YourWebsiteYour,
+  title = {Your Website, Your Business, Your future｜{{Wix}}.Com},
+  journal = {wix.com},
+  urldate = {2023-08-04},
+  abstract = {It starts with a website. Build on a platform that gives you the freedom to create, design, and grow online exactly the way you want.},
+  howpublished = {https://www.wix.com},
+  langid = {english}
 }
