--- a/index.qmd
+++ b/index.qmd
@@ -9,7 +9,7 @@ You'll find chapters on the left, and can download Word files for each chapter o
 
 Chapters that I've not done (including this one) are [this colour]{.text-muted}. Chapters in [this colour]{.text-warning} are a works-in-progress. 
 
-If you see anything like "\@something", "\{\{< var something >\}\}", or "#TODO" then please ignore. 
+If you see anything like "\@something", "**?:something**", or "#TODO" then please ignore. 
 
 Some of the tables and figures aren't rendering nicely yet, especially in Word format. You can ignore that too. 
 :::
